--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        Qual clássico você deseja reviver?
+        <h1>Qual clássico você deseja reviver?</h1>
     </header>
+    <main>
+        <input type="text" placeholder="Digite o nome do jogo">
+    </main>
 </body>
 </html>
