--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Gigantes dos Games</title>
 </head>
 <body>
@@ -10,7 +11,14 @@
         <h1>Qual clássico você deseja reviver?</h1>
     </header>
     <main>
+        <section>
         <input type="text" placeholder="Digite o nome do jogo">
+        <button>Pesquisar</button>
+    </section>
     </main>
+    <footer>
+        <p>2024 - Jogos clássicos. Todos os direitos reservados</p>
+        <p>Entre em contato pelo email: math.filipe23@gmail.com</p>
+    </footer>
 </body>
 </html>
