--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <input type="text" placeholder="Digite o nome do jogo">
         <button>Pesquisar</button>
     </section>
+    <section>
+        <h2>Super Mario Bros</h2>
+        <p>Um dos jogos mais icônicos de todos os tempos, que popularizou o gênero plataforma e introduziu personagens inesquecíveis como Mario e Luigi.</p>
+    </section>
     </main>
     <footer>
         <p>2024 - Jogos clássicos. Todos os direitos reservados</p>
