--- a/index.html
+++ b/index.html
@@ -12,13 +12,29 @@
     </header>
     <main>
         <section>
-        <input type="text" placeholder="Digite o nome do jogo">
-        <button>Pesquisar</button>
-    </section>
-    <section>
-        <h2>Super Mario Bros</h2>
-        <p>Um dos jogos mais icônicos de todos os tempos, que popularizou o gênero plataforma e introduziu personagens inesquecíveis como Mario e Luigi.</p>
-    </section>
+            <input type="text" placeholder="Digite o nome do jogo">
+            <button>Pesquisar</button>
+        </section>
+        <section class="resultados-pesquisa">
+            <div class="item-resultado">
+                <img src="img/mario.jpg" alt="Super Mario Bros">
+                <h2>Super Mario Bros</h2>
+                <p class="descricao-meta">Um dos jogos mais icônicos de todos os tempos e introduziu personagens inesquecíveis como Mario e Luigi.</p>
+                <a href="https://pt.wikipedia.org/wiki/Super_Mario_Bros." target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/zelda.jpg" alt="The Legend of Zelda">
+                <h2>The Legend of Zelda</h2>
+                <p class="descricao-meta">Um marco nos jogos de aventura, com um mundo aberto, puzzles desafiadores e uma história envolvente.</p>
+                <a href="https://pt.wikipedia.org/wiki/Super_Mario_Bros." target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/final-fantasy.jpg" alt="Final Fantasy VII">
+                <h2>Final Fantasy VII</h2>
+                <p class="descricao-meta">Um dos RPGs mais aclamados, com uma narrativa épica, personagens memoráveis e um sistema de combate inovador.</p>
+                <a href="https://pt.wikipedia.org/wiki/Super_Mario_Bros." target="_blank">Mais Informações</a>
+            </div>
+        </section>
     </main>
     <footer>
         <p>2024 - Jogos clássicos. Todos os direitos reservados</p>
