[feat] new-files

--- a/index.html
+++ b/index.html
@@ -20,19 +20,55 @@
                 <img src="img/mario.jpg" alt="Super Mario Bros">
                 <h2>Super Mario Bros</h2>
                 <p class="descricao-meta">Um dos jogos mais icônicos de todos os tempos e introduziu personagens inesquecíveis como Mario e Luigi.</p>
-                <a href="https://pt.wikipedia.org/wiki/Super_Mario_Bros." target="_blank">Mais Informações</a>
+                <a href="https://pt.wikipedia.org/wiki/Super_Mario_Bros" target="_blank">Mais Informações</a>
             </div>
             <div class="item-resultado">
                 <img src="img/zelda.jpg" alt="The Legend of Zelda">
                 <h2>The Legend of Zelda</h2>
                 <p class="descricao-meta">Um marco nos jogos de aventura, com um mundo aberto, puzzles desafiadores e uma história envolvente.</p>
-                <a href="https://pt.wikipedia.org/wiki/Super_Mario_Bros." target="_blank">Mais Informações</a>
+                <a href="https://pt.wikipedia.org/wiki/The_Legend_of_Zelda:_A_Link_to_the_Past" target="_blank">Mais Informações</a>
             </div>
             <div class="item-resultado">
                 <img src="img/final-fantasy.jpg" alt="Final Fantasy VII">
                 <h2>Final Fantasy VII</h2>
                 <p class="descricao-meta">Um dos RPGs mais aclamados, com uma narrativa épica, personagens memoráveis e um sistema de combate inovador.</p>
-                <a href="https://pt.wikipedia.org/wiki/Super_Mario_Bros." target="_blank">Mais Informações</a>
+                <a href="https://pt.wikipedia.org/wiki/Final_Fantasy_VII" target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/metal-gear.jpg" alt="Metal Gear Solid">
+                <h2>Metal Gear Solid</h2>
+                <p class="descricao-meta">Um dos pioneiros dos jogos de espionagem, com uma jogabilidade tensa e personagens carismáticos.</p>
+                <a href="https://pt.wikipedia.org/wiki/Metal_Gear_Solid" target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/tony-hawk.jpg" alt="Tony Hawk's Pro Skater 2">
+                <h2>Tony Hawk's Pro Skater 2</h2>
+                <p class="descricao-meta">Um clássico dos jogos de skate, que popularizou o gênero e inspirou gerações de skatistas virtuais.</p>
+                <a href="https://pt.wikipedia.org/wiki/Tony_Hawk%27s_Pro_Skater_2" target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/the-sims.jpg" alt="The Sims">
+                <h2>The Sims</h2>
+                <p class="descricao-meta">Um simulador de vida que permite aos jogadores criar e controlar suas próprias famílias virtuais.</p>
+                <a href="https://pt.wikipedia.org/wiki/The_Sims" target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/diablo2.jpg" alt="Diablo II">
+                <h2>Diablo II</h2>
+                <p class="descricao-meta">Um RPG de ação viciante, com hordas de inimigos, itens lendários e um sistema de progressão profundo.</p>
+                <a href="https://pt.wikipedia.org/wiki/Diablo_II" target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/gta3.jpg" alt="Grand Theft Auto III">
+                <h2>Grand Theft Auto III</h2>
+                <p class="descricao-meta">Um marco nos jogos de mundo aberto, com uma liberdade de exploração sem precedentes e uma narrativa realista.</p>
+                <a href="https://pt.wikipedia.org/wiki/Grand_Theft_Auto_III" target="_blank">Mais Informações</a>
+            </div>
+            <div class="item-resultado">
+                <img src="img/resident-evil2.jpg" alt="Resident Evil 2">
+                <h2>Resident Evil 2</h2>
+                <p class="descricao-meta">Um dos jogos de terror mais icônicos de todos os tempos, com uma atmosfera tensa e zumbis assustadores.</p>
+                <a href="https://pt.wikipedia.org/wiki/Resident_Evil_2" target="_blank">Mais Informações</a>
             </div>
         </section>
     </main>
