--- a/index.html
+++ b/index.html
@@ -75,5 +75,7 @@
     <footer>
         <p>2024 - Jogos clássicos. Todos os direitos reservados</p>
     </footer>
+    <script src="dados.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
