--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <input type="text" placeholder="Digite o nome do jogo">
             <button>Pesquisar</button>
         </section>
-        <section class="resultados-pesquisa">
-            <div class="item-resultado">
+        <section class="resultados-pesquisa"
+        id="resultados-pesquisa">
+            <!-- <div class="item-resultado">
                 <img src="img/mario.jpg" alt="Super Mario Bros">
                 <h2>Super Mario Bros</h2>
                 <p class="descricao-meta">Um dos jogos mais icônicos de todos os tempos e introduziu personagens inesquecíveis como Mario e Luigi.</p>
@@ -69,7 +70,7 @@
                 <h2>Resident Evil 2</h2>
                 <p class="descricao-meta">Um dos jogos de terror mais icônicos de todos os tempos, com uma atmosfera tensa e zumbis assustadores.</p>
                 <a href="https://pt.wikipedia.org/wiki/Resident_Evil_2" target="_blank">Mais Informações</a>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer>
