[fix] change-layout

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Qual clássico você deseja reviver?</h1>
+        <nav>
+            <a href="index.html">
+                <img src="img/logo.png" alt="Logo Gigantes dos Games">
+            </a>
+            <ul>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>     
     </header>
     <main>
+        <h1>Qual clássico você deseja reviver?</h1>
         <section>
             <input type="text" placeholder="Digite o nome do jogo" id="campo-pesquisa">
             <button onclick="pesquisar()">Pesquisar</button>
