[feat] new-games

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h1>Qual clássico você deseja reviver?</h1>
         <section>
-            <input type="text" placeholder="Digite o nome do jogo" id="campo-pesquisa">
+            <input type="text" placeholder="Digite o nome do jogo, gênero ou todos" id="campo-pesquisa">
             <button onclick="pesquisar()">Pesquisar</button>
         </section>
         <section class="resultados-pesquisa"
