--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <img src="img/logo.png" alt="Logo Gigantes dos Games">
             </a>
             <div class="image-container">
-                <a href="sobre.html"><img src="img/git.png" width="30" alt="GitHub"></a>
-                <a href="contato.html"><img src="img/LinkdIn.png" width="30" alt="LinkedIn"></a>
+                <a href="https://github.com/MathFilipeDev" target="_blank"><img src="img/git.png" width="30" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/mathfilipe" target="_blank"><img src="img/LinkdIn.png" width="30" alt="LinkedIn"></a>
             </div>
         </nav>       
     </header>
